adding keywords removing table environment
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@440 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/2addu.html
+++ b/vmb/src/mmixide/help/2addu.html
@@ -1,5 +1,12 @@
 
-<h2>2ADDU, 4ADDU, 8ADDU and 16ADDU</h2>
+<h4>2ADDU, 4ADDU, 8ADDU and 16ADDU</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Address Calculation">
+	<param name="Keyword" value="2ADDU">
+	<param name="Keyword" value="4ADDU">
+	<param name="Keyword" value="8ADDU">
+	<param name="Keyword" value="16ADDU">
+</OBJECT>
 
 
  <B>Name:</B>
