--- a/vmb/src/mmixide/help/bdif.html
+++ b/vmb/src/mmixide/help/bdif.html
@@ -1,8 +1,13 @@
 
 
-<h2>Bytewise Operations</h2>
+<h4>Bytewise Operations</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="BDIF">
+	<param name="Keyword" value="WDIF">
+	<param name="Keyword" value="TDIF">
+	<param name="Keyword" value="ODIF">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <table cellspacing=5 
@@ -28,6 +33,5 @@
 Saturated Difference. An Octa byte is regarded as a vector of
 eight byte, four Wyde, or two Tetra respectively.
 
-   </td></tr>
-</table><p>
+
 
