--- a/vmb/src/mmixide/help/branch.html
+++ b/vmb/src/mmixide/help/branch.html
@@ -1,9 +1,18 @@
 
-<h2><a name="Branches" id="Branches">Branches</a></h2>
+<h4><a name="Branches" id="Branches">Branches</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Branches">
+	<param name="Keyword" value="BZ">
+	<param name="Keyword" value="BNZ">
+	<param name="Keyword" value="BP">
+	<param name="Keyword" value="BNP">
+	<param name="Keyword" value="BN">
+	<param name="Keyword" value="BNN">
+	<param name="Keyword" value="BOD">
+	<param name="Keyword" value="BEV">
+</OBJECT>
 
 
-<table width="100%" border=2 cellpadding=5><tr><td>
-  
   <B>Name:</B>
 <table cellspacing=5 
 ><tr><td><a name="BZ" id="BZ">BZ</a> $X,YZ </td><td>PBZ $X,YZ </td><td>(Probable) Branch if zero          </td></tr>
@@ -48,6 +57,4 @@ Probable branches, with the prefix "P" are a hint for the processor
 that the branch is probably taken, directing the instruction fetch
 to the target address.
 
-   </td></tr>
-</table><p>
 
