--- a/vmb/src/mmixide/help/byte.html
+++ b/vmb/src/mmixide/help/byte.html
@@ -1,7 +1,12 @@
 
-<h2>Assembling Data</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>Assembling Data</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Data">
+	<param name="Keyword" value="BYTE">
+	<param name="Keyword" value="WYDE">
+	<param name="Keyword" value="TETRA">
+	<param name="Keyword" value="OCTA">
+</OBJECT>
 
   <B>Name:</B>
 <p>
@@ -20,6 +25,5 @@ before the program starts.
 <P>
  Strings (enclosed in double quotes) denote a list of ASCII values.
  Note: These values, too, will be padded to have the required size.
-   </td></tr>
-</table><p>
+
 
