--- a/vmb/src/mmixide/help/cswap.html
+++ b/vmb/src/mmixide/help/cswap.html
@@ -1,8 +1,10 @@
 
 
-<h2>CSWAP</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>CSWAP</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Synchronization">
+	<param name="Keyword" value="CSWAP">
+</OBJECT>
 
   <B>Name:</B>
 <p>
@@ -28,6 +30,5 @@ otherwise load the value from the given address into rP and set $X to 0.
   <p>
 This is an atomic operation, and therefore suitable to synchronize
 processes using memory locations.
-   </td></tr>
-</table><p>
+
 
