--- a/vmb/src/mmixide/help/farith.html
+++ b/vmb/src/mmixide/help/farith.html
@@ -1,9 +1,17 @@
 
 
 <h4>Floating Point Arithmetic</h4>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
-
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Arithmetic">
+	<param name="Keyword" value="Floating Point">
+	<param name="Keyword" value="FADD">
+	<param name="Keyword" value="FSUB">
+	<param name="Keyword" value="FMUL">
+	<param name="Keyword" value="FDIV">
+	<param name="Keyword" value="FREM">
+	<param name="Keyword" value="FSQRT">
+	<param name="Keyword" value="FINT">
+</OBJECT>
 
 
   <B>Name:</B>
@@ -41,5 +49,3 @@ FADD, FSUB, FMUL, and FDIV perform arithmetic on floating point numbers.
   to specify a rounding mode: ROUND_OFF, ROUND_UP,
   ROUND_DOWN, or ROUND_NEAR.                        
 
-   </td></tr>
-</table><p>
