--- a/vmb/src/mmixide/help/fcmp.html
+++ b/vmb/src/mmixide/help/fcmp.html
@@ -1,8 +1,18 @@
 
 
 <h4>Comparing Floating Point Numbers</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Comparison">
+	<param name="Keyword" value="Floating Point">
+	<param name="Keyword" value="FCMP">
+	<param name="Keyword" value="FEQL">
+	<param name="Keyword" value="FUN">
+	<param name="Keyword" value="FCMPE">
+	<param name="Keyword" value="FEQLE">
+	<param name="Keyword" value="FUNE">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
+
   <B>Name:</B>
 <p>
   <a name="FCMP" id="FCMP">FCMP</a> $X,$Y,$Z
@@ -91,6 +101,4 @@ The value of &#x03B5; is taken from the special register rE.
 For a more detailed description see for example
  [<a href="mmix-doc.pdf">mmix-doc</a>].
 
-   </td></tr>
-</table><p>
 
