--- a/vmb/src/mmixide/help/geta.html
+++ b/vmb/src/mmixide/help/geta.html
@@ -1,9 +1,10 @@
 
 
-<h2>Get Address (GETA)</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
-
+<h4>Get Address (GETA)</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Relative Address">
+	<param name="Keyword" value="GETA">
+</OBJECT>
 
 
   <B>Name:</B>
@@ -27,5 +28,3 @@ Stores an address in register $X using relative addressing.
 The assembler is able to resolve forward references and will
 automatically choose the appropriate opcode.
 
-   </td></tr>
-</table><p>
