--- a/vmb/src/mmixide/help/go.html
+++ b/vmb/src/mmixide/help/go.html
@@ -1,7 +1,12 @@
 
-<h2>Jumps with Absolute Addresses</h2>
+<h4>Jumps with Absolute Addresses</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Absolute Address">
+	<param name="Keyword" value="Jump">
+	<param name="Keyword" value="GO">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
+
   <B>Name:</B>
 <p>
 <table cellspacing=5 >
@@ -30,5 +35,4 @@ The instruction can be used to link subroutines or coroutines.
 <p><a href="#PUSHGO">PUSHGO</a>, <a href="#GETA">GETA</a>,
 <a href="#LDA">LDA</a>, <a href="#PREGO">PREGO</a>
                                                                
-   </td></tr>
-</table><p>
+
