--- a/vmb/src/mmixide/help/greg.html
+++ b/vmb/src/mmixide/help/greg.html
@@ -1,7 +1,11 @@
 
 
-<h2>Defining global Registers with GREG</h2>
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>Defining global Registers with GREG</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Global Register">
+	<param name="Keyword" value="Definition">
+	<param name="Keyword" value="GREG">
+</OBJECT>
 
   <B>Name:</B>
 <p>
@@ -21,5 +25,4 @@ The first GREG will allocate $254 and the next $253, and so on.
 <p>
 An optional label can be used
 to give a name to the new global register.
-   </td></tr>
-</table><p>
+
