--- a/vmb/src/mmixide/help/inch.html
+++ b/vmb/src/mmixide/help/inch.html
@@ -1,6 +1,12 @@
 
 
-<h2>INCH, INCMH, INCML, and INCL</h2>
+<h4>INCH, INCMH, INCML, and INCL</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="INCH">
+	<param name="Keyword" value="INCMH">
+	<param name="Keyword" value="INCML">
+	<param name="Keyword" value="INCL">
+</OBJECT>
 
 
  <B>Name:</B>
