--- a/vmb/src/mmixide/help/is.html
+++ b/vmb/src/mmixide/help/is.html
@@ -1,7 +1,11 @@
 
-<h2>Defining Names with IS</h2>
+<h4>Defining Names with IS</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Names">
+	<param name="Keyword" value="Definition">
+	<param name="Keyword" value="IS">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -18,5 +22,3 @@ The IS instruction can be used to define names for registers.
 <p>
 <a href="#PREFIX">PREFIX</a> .
 
-   </td></tr>
-</table><p>                
