--- a/vmb/src/mmixide/help/jmp.html
+++ b/vmb/src/mmixide/help/jmp.html
@@ -1,6 +1,10 @@
-<h2>Jumps with Relative Addresses</h2>
+<h4>Jumps with Relative Addresses</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Jump">
+	<param name="Keyword" value="Relative Address">
+	<param name="Keyword" value="JMP">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -25,6 +29,5 @@ Executes an unconditional jump.
 Usually, a label is used to specify the jump target. The assembler will
 automatically determine whether it is a jump forward or backward and
 selects the appropriate instruction.
-   </td></tr>
-</table><p>
+
 
