--- a/vmb/src/mmixide/help/lda.html
+++ b/vmb/src/mmixide/help/lda.html
@@ -1,7 +1,11 @@
 
-<h2>The Pseudo Instruction LDA</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>The Pseudo Instruction LDA</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Loading">
+	<param name="Keyword" value="Address">
+	<param name="Keyword" value="LDA">
+	<param name="Keyword" value="ADDUI">
+</OBJECT>
 
 
 
@@ -34,6 +38,4 @@ operands.
 <a href="#ADDU">ADDU</a>,
 <a href="#16Bit_Immediate">Bitwise Operations with 16-Bit Immediate Values</a>.
 
-   </td></tr>
-</table><p>
 
