--- a/vmb/src/mmixide/help/ldb.html
+++ b/vmb/src/mmixide/help/ldb.html
@@ -1,7 +1,14 @@
 
-<h2><a name="Signed_Load" id="Signed_Load">Loading Signed Integers</a></h2>
+<h4><a name="Signed_Load" id="Signed_Load">Loading Signed Integers</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Loading">
+	<param name="Keyword" value="Signed">
+	<param name="Keyword" value="LDB">
+	<param name="Keyword" value="LDW">
+	<param name="Keyword" value="LDT">
+	<param name="Keyword" value="LDO">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
   <B>Name:</B>
 <table cellspacing=5 
 ><tr><td><a name="LDB" id="LDB">LDB</a> $X,$Y,$Z</td><td>LDB $X,$Y,Z</td><td>Load Byte/Load Byte Immediate   </td></tr>
@@ -37,5 +44,4 @@ and for wydes a multiple of 2.
 <p>
 <a href="#Unsigned_Load">Loading Unsigned Data</a>. 
 
-   </td></tr>
-</table><p>
+
