--- a/vmb/src/mmixide/help/ldbu.html
+++ b/vmb/src/mmixide/help/ldbu.html
@@ -1,7 +1,14 @@
 
-<h2><a name="Unsigned_Load" id="Unsigned_Load">Loading Unsigned Data</a></h2>
+<h4><a name="Unsigned_Load" id="Unsigned_Load">Loading Unsigned Data</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Loading">
+	<param name="Keyword" value="Unsigned">
+	<param name="Keyword" value="LDBU">
+	<param name="Keyword" value="LDWU">
+	<param name="Keyword" value="LDTU">
+	<param name="Keyword" value="LDOU">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <table cellspacing=5>
@@ -40,5 +47,3 @@ and for wydes a multiple of 2.
 <p>
 <a href="#Signed_Load">Loading Signed Integers</a>.
 
-   </td></tr>
-</table><p>
