--- a/vmb/src/mmixide/help/ldht.html
+++ b/vmb/src/mmixide/help/ldht.html
@@ -1,7 +1,10 @@
 
-<h2>The LDHT Instruction</h2>
+<h4>The LDHT Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Loading">
+	<param name="Keyword" value="LDHT">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <table cellspacing=5 
@@ -29,5 +32,4 @@ The address A is rounded down, if necessary, to be a multiple of 4.
 <p>
 <a href="#STHT">STHT</a> and <a href="#LDT">LDT</a>.
 
-   </td></tr>
-</table><p>
+
