--- a/vmb/src/mmixide/help/ldsf.html
+++ b/vmb/src/mmixide/help/ldsf.html
@@ -1,7 +1,12 @@
 
-<h2>Loading and Storing of Short Floats</h2>
+<h4>Loading and Storing of Short Floats</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Storing">
+	<param name="Keyword" value="Short Float">
+	<param name="Keyword" value="LDSF">
+	<param name="Keyword" value="STSF">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
  <B>Name:</B>
 <table cellspacing=5 
@@ -30,5 +35,4 @@ the 64-bit floating point format is done.
 <p>
 <a href="#LDT">LDT</a> and <a href="#STT">STT</a> (for 32-bit fixed point numbers).
 
-   </td></tr>
-</table><p>
+
