--- a/vmb/src/mmixide/help/ldunc.html
+++ b/vmb/src/mmixide/help/ldunc.html
@@ -1,7 +1,9 @@
 
-<h2>LDUNC and STUNC</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>LDUNC and STUNC</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="LDUNC">
+	<param name="Keyword" value="STUNC">
+</OBJECT>
 
 
 
@@ -29,6 +31,5 @@ the cache.
 <p>
 <a href="#LDO">LDO</a> and <a href="#STO">STO</a>.
 
-   </td></tr>
-</table><p>
+
 
