--- a/vmb/src/mmixide/help/ldvts.html
+++ b/vmb/src/mmixide/help/ldvts.html
@@ -1,9 +1,9 @@
 
 
-<h2>The LDVTS Instruction</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
-
+<h4>The LDVTS Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="LDVTS">
+</OBJECT>
 
 
   <B>Name:</B>
@@ -19,6 +19,4 @@
 Load virtual translation table. Modifies the
 tables used to cache translations from virtual to physical addresses.
 
-   </td></tr>
-</table><p>
 
