--- a/vmb/src/mmixide/help/loc.html
+++ b/vmb/src/mmixide/help/loc.html
@@ -1,8 +1,10 @@
 
 
-<h2>The LOC instruction</h2>
+<h4>The LOC instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="LOC">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -34,5 +36,4 @@ variable Data </td></tr>
 <tr><td>Stack Segment </td><td><TT>Stack_Segment</TT></td><td><TT>#6000000000000000</TT></td><td>  &nbsp;</td></tr>
 </table>
 
-   </td></tr>
-</table><p>
+
