--- a/vmb/src/mmixide/help/local.html
+++ b/vmb/src/mmixide/help/local.html
@@ -1,9 +1,11 @@
 
 
-<h2>The LOCAL Instruction</h2>
+<h4>The LOCAL Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="LOCAL">
+</OBJECT>
 
 
-<table width="100%" border=2 cellpadding=5><tr><td>
   <B>Name:</B>
 <p>
 <a name="LOCAL" id="LOCAL">LOCAL</a> <I>Expression</I>
@@ -20,6 +22,5 @@ to 32, since registers with smaller numbers are never global.
 <p>
 <a href="#PUSHJ">PUSHJ</a> 
 
-   </td></tr>
-</table><p>
+
 
