--- a/vmb/src/mmixide/help/mmixide.html
+++ b/vmb/src/mmixide/help/mmixide.html
@@ -1,5 +1,9 @@
 <h1>MMIX IDE</h1>
 <img src="..\Icons\mmixide.png">
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="MMIX">
+	<param name="Keyword" value="Content">
+</OBJECT>
 
 Content
 <ul>
