--- a/vmb/src/mmixide/help/mor.html
+++ b/vmb/src/mmixide/help/mor.html
@@ -1,7 +1,9 @@
 
-<h2>Mix and Match</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>Mix and Match</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="MOR">
+	<param name="Keyword" value="MXOR">
+</OBJECT>
 
 
 
@@ -40,5 +42,4 @@ and compute the result as a matrix multiplication,  where in MOR, Addition is re
   (exclusive or (&#x02C6;)). In both cases the AND operation (&amp;) is used 
   instead of multiplication.
 
-   </td></tr>
-</table><p>
+
