--- a/vmb/src/mmixide/help/mux.html
+++ b/vmb/src/mmixide/help/mux.html
@@ -1,8 +1,11 @@
 
 
-<h2>The MUX Instruction</h2>
+<h4>The MUX Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="MUX">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
+
   <B>Name:</B>
 <p>
 <a name="MUX" id="MUX">MUX</a> $X,$Y,$Z
@@ -24,5 +27,3 @@ Multiplex-Mask-Registers rM.
 The bits in the result are taken from $Y, when the corresponding bit in rM is 1
 and from $Z if the bit in rM is 0.
 
-   </td></tr>
-</table><p>
