--- a/vmb/src/mmixide/help/orh.html
+++ b/vmb/src/mmixide/help/orh.html
@@ -1,9 +1,19 @@
 
 
-<h2><a name="16Bit_Immediate" id ="16Bit_Immediate">Bitwise Operations with 16-Bit Immediate values</a></h2>
+<h4><a name="16Bit_Immediate" id ="16Bit_Immediate">Bitwise Operations with 16-Bit Immediate values</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="ORH">
+	<param name="Keyword" value="ORMH">
+	<param name="Keyword" value="ORML">
+	<param name="Keyword" value="ORL">
+	<param name="Keyword" value="ANDH">
+	<param name="Keyword" value="ANDMH">
+	<param name="Keyword" value="ANDML">
+	<param name="Keyword" value="ANDL">
+</OBJECT>
 
 
-<table width="100%" border=2 cellpadding=5><tr><td>
+
  <B>Name:</B>
 <table cellspacing=5 
 ><tr>
@@ -31,6 +41,5 @@ Bitwise operation on a 16-bit immediate value.
 Before the immediate wyde operand is used, it is shifted into one of the four
 possible positions of an octabyte.
 
-   </td></tr>
-</table><p>
+
 
