--- a/vmb/src/mmixide/help/pop.html
+++ b/vmb/src/mmixide/help/pop.html
@@ -1,7 +1,9 @@
 
-<h2>The POP Instruction</h2>
+<h4>The POP Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="POP">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
   <B>Name:</B>
 <p>
 <a name="POP" id="POP">POP</a> X,YZ
@@ -47,5 +49,4 @@ instruction).
 <p>
 <a href="#PUSHJ">PUSHJ</a> 
 
-   </td></tr>
-</table><p>
+
