--- a/vmb/src/mmixide/help/prefix.html
+++ b/vmb/src/mmixide/help/prefix.html
@@ -1,8 +1,11 @@
 
 
-<h2>Defining Namespaces with PREFIX</h2>
+<h4>Defining Namespaces with PREFIX</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="PREFIX">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
+
   <B>Name:</B>
 <p>
 <a name="PREFIX" id="PREFIX">PREFIX</a> <I>Name</I>
@@ -22,5 +25,4 @@ Incomplete names are completed by adding the current prefix to them.
 At the very beginning of assembling a program, the current prefix is just
 the colon (:).
 This situation can be restored any time by saying "PREFIX :".
-   </td></tr>
-</table><p>
+
