--- a/vmb/src/mmixide/help/preld.html
+++ b/vmb/src/mmixide/help/preld.html
@@ -1,9 +1,12 @@
 
 
-<h2>PRELD, PREST, and PREGO</h2>
+<h4>PRELD, PREST, and PREGO</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="PRELD">
+	<param name="Keyword" value="PREST">
+	<param name="Keyword" value="PREGO">
+</OBJECT>
 
-
-<table width="100%" border=2 cellpadding=5><tr><td>
 
  <B>Name:</B>
 <p>
@@ -25,7 +28,7 @@ Informs the machine that the content of the memory region from
       </li>
       <li class="itemize">definitively be written before the next load (PREST), or
       </li>
-      <li class="itemize">probably soon be used as an instruction (PREGO).</li></ul>
-   </td></tr>
-</table><p>
+      <li class="itemize">probably soon be used as an instruction (PREGO).</li>
+</ul>
+
 
