--- a/vmb/src/mmixide/help/pushj.html
+++ b/vmb/src/mmixide/help/pushj.html
@@ -1,8 +1,11 @@
 
-<h2>PUSHJ and PUSHGO</h2>
+<h4>PUSHJ and PUSHGO</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="PUSHJ">
+	<param name="Keyword" value="PUSHGO">
+</OBJECT>
 
 
-<table width="100%" border=2 cellpadding=5><tr><td>
   <B>Name:</B>
 <p>
 <a name="PUSHJ" id="PUSHJ">PUSHJ</a> $X,$Y,Z
@@ -61,6 +64,5 @@ PUSHGO: 3&upsilon;
 <a href="#POP">POP</a> and
   <br><a href="#GO">GO</a> 
 
-   </td></tr>
-</table><p>
+
 
