--- a/vmb/src/mmixide/help/put.html
+++ b/vmb/src/mmixide/help/put.html
@@ -1,7 +1,10 @@
-<h2>PUT and GET</h2>
+<h4>PUT and GET</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="PUT">
+	<param name="Keyword" value="GET">
+</OBJECT>
 
 
-<table width="100%" border=2 cellpadding=5><tr><td>
   <B>Name:</B>
 <table cellspacing=5>
  <tr><td><a name="PUT" id="PUT">PUT</a> X,$Z
@@ -35,5 +38,3 @@ less than the current value of rL, or greater than 255.
 It is not possible to store a value in rA that is greater than
 #3FFFF.
 
-   </td></tr>
-</table><p>
