--- a/vmb/src/mmixide/help/resume.html
+++ b/vmb/src/mmixide/help/resume.html
@@ -1,10 +1,9 @@
 
-<h2>RESUME</h2>
+<h4>RESUME</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="RESUME">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
-
-
- 
   
   <a name="RESUME" id="RESUME">RESUME</a> Z
  <p>
@@ -26,6 +25,4 @@ Undoes the effect of a previous TRIP or TRAP instruction.
 <a href="#TRIP">TRIP</a> and <a href="#TRAP">TRAP</a>
                                                                
 
-   </td></tr>
-</table><p>
 
