--- a/vmb/src/mmixide/help/sadd.html
+++ b/vmb/src/mmixide/help/sadd.html
@@ -1,9 +1,9 @@
 
 
-<h2>The  SADD Instruction</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
-
+<h4>The  SADD Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SADD">
+</OBJECT>
 
 
   <B>Name:</B>
@@ -26,6 +26,4 @@ This instruction (Sideways Add)
 counts the number of bit positions in which $y has a 1 and $Z has a 0.
 The result is stored in $X.
 
-   </td></tr>
-</table><p>
 
