--- a/vmb/src/mmixide/help/save.html
+++ b/vmb/src/mmixide/help/save.html
@@ -1,8 +1,11 @@
 
 
-<h2>SAVE and UNSAVE</h2>
+<h4>SAVE and UNSAVE</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SAVE">
+	<param name="Keyword" value="UNSAVE">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -24,6 +27,5 @@
 <B>Description:</B>
 <p>
 Saves and restore the process state in the register stack.
-   </td></tr>
-</table><p>
+
 
