--- a/vmb/src/mmixide/help/seth.html
+++ b/vmb/src/mmixide/help/seth.html
@@ -1,9 +1,14 @@
 
 
 
-<h2>SET, SETH, SETMH, SETML, and SETL</h2>
+<h4>SET, SETH, SETMH, SETML, and SETL</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SETH">	
+	<param name="Keyword" value="SETMH">
+	<param name="Keyword" value="SETML">
+	<param name="Keyword" value="SETL">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -40,5 +45,4 @@ The instruction SET $X,$Y is assembled as  OR $X,$Y,0.
 <a href="#16Bit_Immediate">Bitwise Operations with 16-Bit Immediate Operands</a> 
   and <a href="#INCH">INCH</a> .
 
-   </td></tr>
-</table><p>
+
