--- a/vmb/src/mmixide/help/shift.html
+++ b/vmb/src/mmixide/help/shift.html
@@ -1,8 +1,14 @@
 
 <h2>Shifting Bit Patterns<h2>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Shifting">	
+	<param name="Keyword" value="SL">	
+	<param name="Keyword" value="SLU">
+	<param name="Keyword" value="SR">
+	<param name="Keyword" value="SRU">
+</OBJECT>
 
 
-<table width="100%" border=2 cellpadding=5><tr><td>
   <B>Name:</B>
 <table cellspacing=5 
 ><tr><td><a name="SL" id="SL">SL</a> $X,$Y,$Z </td><td>SL $X,$Y,Z </td></tr>
@@ -35,5 +41,4 @@ this process, an overflow is signaled. The result is filled with 0 bits from the
 SR shifts the bits in register $Y to the right.
 It fills the target register from the left by replicating the sign bit and discards
 bits on the right; SRU fills the target register from the left with zeros.
- </td></tr>
-</table><p>
+
