--- a/vmb/src/mmixide/help/shortfloat.html
+++ b/vmb/src/mmixide/help/shortfloat.html
@@ -2,8 +2,13 @@
 
 
 <h4>Conversion of Short Floats</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Conversion">	
+	<param name="Keyword" value="Short Float">	
+	<param name="Keyword" value="SFLOT">
+	<param name="Keyword" value="SFLOTU">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -33,5 +38,4 @@ The Y-operand may contain a rounding mode similar to the FLOT instruction.
 <a href="#FLOT">FLOT</a> and <a href="#FLOTU">FLOTU</a>.
                                                                                                     
 
-   </td></tr>
-</table><p>
+
