--- a/vmb/src/mmixide/help/signed.html
+++ b/vmb/src/mmixide/help/signed.html
@@ -1,9 +1,14 @@
-<h4><a name="Signed_Arithmetic" id="Signed_Arithmetic"><Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+<h4><a name="Signed_Arithmetic" id="Signed_Arithmetic">
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Signed Arithmetic">
-</OBJECT>Signed Arithmetic</a></h4>
+	<param name="Keyword" value="ADD">
+	<param name="Keyword" value="SUB">
+	<param name="Keyword" value="MUL">
+	<param name="Keyword" value="DIV">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5 >
-<tr ><td>
+
+
 <B>Name:</B>
 <table cellspacing=5 >
 <tr><td><a name="ADD" id="ADD">ADD</a> $X,$Y,$Z</td><td>ADD $X,$Y,Z</td></tr>
@@ -59,6 +64,3 @@ register rA and, if enabled, cause a TRIP.
 <B>See also:</B>
 <p>
 <a href="unsigned.html">Unsigned Arithmetic</a>.
-
-   </td></tr>
-</table><p>
