--- a/vmb/src/mmixide/help/stb.html
+++ b/vmb/src/mmixide/help/stb.html
@@ -1,7 +1,12 @@
 
-<h2><a name="Signed_Store" id="Signed_Store">Storing Signed Integers</a></h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4><a name="Signed_Store" id="Signed_Store">Storing Signed Integers</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Storing">
+	<param name="Keyword" value="STB">
+	<param name="Keyword" value="STW">
+	<param name="Keyword" value="STT">
+	<param name="Keyword" value="STO">
+</OBJECT>
 
 
 
@@ -39,5 +44,4 @@ and for wydes a multiple of 2.
 <B>See also:</B>
 <p>
 <a href="#Unsigned_Store">Storing Unsigned Data</a>.
-   </td></tr>
-</table><p>
+
