--- a/vmb/src/mmixide/help/stbu.html
+++ b/vmb/src/mmixide/help/stbu.html
@@ -1,7 +1,11 @@
 
-<h2><a name="Unsigned_Store" id="Unsigned_Store">Storing Unsigned Data</a></h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4><a name="Unsigned_Store" id="Unsigned_Store">Storing Unsigned Data</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="STBU">
+	<param name="Keyword" value="STWU">
+	<param name="Keyword" value="STTU">
+	<param name="Keyword" value="STOU">
+</OBJECT>
 
   <B>Name:</B>
 <table cellspacing=5 
@@ -40,7 +44,4 @@ and for wydes a multiple of 2.
 <p>
 <a href="#Signed_Store">Storing Signed Integers</a>.
                                                                                                     
-
-   </td></tr>
-</table><p>
 
