--- a/vmb/src/mmixide/help/stco.html
+++ b/vmb/src/mmixide/help/stco.html
@@ -1,8 +1,10 @@
 
 
-<h2>The STCO Instruction</h2>
+<h4>The STCO Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="STCO">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <table cellspacing=5><tr><td><a name="STCO" id="STCO">STCO</a> X,$Y,$Z</td><td>STCO X,$Y,Z</td></tr>
@@ -25,6 +27,5 @@ STCO: &upsilon; + &mu;
 Stores the one byte constant X as an unsigned octa in main memory.
 <p>
 The address A is rounded down, if necessary, to a multiple of 8.
-</td></tr>
-</table><p>
+
 
