--- a/vmb/src/mmixide/help/stht.html
+++ b/vmb/src/mmixide/help/stht.html
@@ -1,7 +1,9 @@
 
-<h2>The STHT Instruction</h2>
+<h4>The STHT Instruction</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="STHT">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
  <B>Name:</B>
 <table cellspacing=5 
@@ -29,5 +31,3 @@ The address A is rounded down, if necessary, to be a multiple of 4.
 <a href="#LDHT">LDHT</a> and
 <a href="#STT">STT</a>.
 
-   </td></tr>
-</table><p>
