--- a/vmb/src/mmixide/help/swym.html
+++ b/vmb/src/mmixide/help/swym.html
@@ -1,8 +1,8 @@
 
-<h2>SWYM</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
-
+<h4>SWYM</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SWYM">
+</OBJECT>
 
 
   <B>Name:</B>
@@ -17,7 +17,6 @@
 <p>
 Sympathize  with  your  machinery.
 This instruction gives the MMIX CPU a short break.
-   </td></tr>
-</table><p>
+
 
 
