--- a/vmb/src/mmixide/help/syncd.html
+++ b/vmb/src/mmixide/help/syncd.html
@@ -1,7 +1,8 @@
 
-<h2>SYNCD</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
+<h4>SYNCD</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SYNCD">
+</OBJECT>
 
 
 
@@ -18,6 +19,4 @@ SYNCD: &upsilon;
 Synchronize data cache und main memory in the region
 $Y+$Z to X+$Y+$Z.
 
-   </td></tr>
-</table><p>
 
