--- a/vmb/src/mmixide/help/trap.html
+++ b/vmb/src/mmixide/help/trap.html
@@ -1,6 +1,8 @@
-<h2>TRAP</h2>
+<h4>TRAP</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="TRAP">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -31,6 +33,4 @@ at address rT.
 <a href="#TRIP">TRIP</a> and <a href="#RESUME">RESUME</a>
                                                                
 
-   </td></tr>
-</table><p>
 
