--- a/vmb/src/mmixide/help/trip.html
+++ b/vmb/src/mmixide/help/trip.html
@@ -1,7 +1,9 @@
 
-<h2>TRIP</h2>
+<h4>TRIP</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="TRIP">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -31,6 +33,3 @@ Causes a Trip interrupt and jumps to the Trip handler at address #00.
 <p>
 <a href="#TRAP">TRAP</a> and <a href="#RESUME">RESUME</a>
                                                                
-
-   </td></tr>
-</table><p>
