--- a/vmb/src/mmixide/help/bspec.html
+++ b/vmb/src/mmixide/help/bspec.html
@@ -1,9 +1,11 @@
 
 
-<h2>BSPEC and ESPEC</h2>
-
-<table width="100%" border=2 cellpadding=5><tr><td>
-
+<h4>BSPEC and ESPEC</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Special Mode">
+	<param name="Keyword" value="BSPEC">
+	<param name="Keyword" value="ESPEC">
+</OBJECT>
 
 <B>Name:</B>
 <p>
@@ -31,5 +33,4 @@ and can be used to pass information regarding format and type of the
 following information.
 For example BSPEC 1 might be used to pass source line numbers and
 BSPEC 2 for source file names.
-</td></tr>
-</table><p>
+
