--- a/vmb/src/mmixide/help/float.html
+++ b/vmb/src/mmixide/help/float.html
@@ -1,5 +1,9 @@
 
 <h3><a name="Float_Arithmetic" id="Float_Arithmetic">Floating Point Arithmetic</a></h3>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Arithmetic">
+	<param name="Keyword" value="Floating Point">
+</OBJECT>
 
 <ul>
 <li><a href="flot.html">Floating Point Conversion</a></li>
