--- a/vmb/src/mmixide/help/flot.html
+++ b/vmb/src/mmixide/help/flot.html
@@ -1,5 +1,13 @@
 
 <h4>Floating Point Conversion</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Conversion">
+	<param name="Keyword" value="Floating Point">
+	<param name="Keyword" value="FLOT">
+	<param name="Keyword" value="FLOTU">
+	<param name="Keyword" value="FIX">
+	<param name="Keyword" value="FIXU">
+</OBJECT>
 
   <B>Name:</B>
 <table cellspacing=5 
