--- a/vmb/src/mmixide/help/instructions.html
+++ b/vmb/src/mmixide/help/instructions.html
@@ -1,4 +1,9 @@
 <h3>The MMIX Instruction Set</h3>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="MMIX">
+	<param name="Keyword" value="Instructions">
+</OBJECT>
+
 <ul>
 <li><a href="integer.html">Integer Arithmetic</a></li>
 
