--- a/vmb/src/mmixide/help/integer.html
+++ b/vmb/src/mmixide/help/integer.html
@@ -1,6 +1,12 @@
 
 
 <h3><a name="Integer_Arithmetic" id="Integer_Arithmetic">Integer Arithmetic</a></h3>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Arithmetic">
+	<param name="Keyword" value="Integer">
+</OBJECT>
+
+
 <ul>
 <li><a href="signed.html">Signed  Arithmetic</a></li>
 <li><a href="unsigned.html">Unsigned  Arithmetic</a></li>
