--- a/vmb/src/mmixide/help/logic.html
+++ b/vmb/src/mmixide/help/logic.html
@@ -1,7 +1,16 @@
 
-<h2>Bitwise Logical Operations</h2>
+<h4>Bitwise Logical Operations</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="OR">
+	<param name="Keyword" value="AND">
+	<param name="Keyword" value="XOR">
+	<param name="Keyword" value="ANDN">
+	<param name="Keyword" value="ORN">
+	<param name="Keyword" value="NAND">
+	<param name="Keyword" value="NOR">
+	<param name="Keyword" value="NXOR">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <table cellspacing=5 
@@ -51,6 +60,5 @@ The other columns show the corresponding result bit.
 <p>
 The specified operation is executed in parallel on each of the 64 bits
 of the two source operands which yields 64 result bits.
-   </td></tr>
-</table><p>
+
 
