--- a/vmb/src/mmixide/help/neg.html
+++ b/vmb/src/mmixide/help/neg.html
@@ -1,7 +1,10 @@
 
 <h4>NEG and NEGU</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="NEG">
+	<param name="Keyword" value="NEGU">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <table cellspacing=5 >
@@ -23,5 +26,3 @@
 <p>
 Y is a nonnegative constant, usually zero. If Y has the value zero, it can be omitted.
 The instruction is used to negate $Z. 
-   </td></tr>
-</table><p>
