--- a/vmb/src/mmixide/help/sync.html
+++ b/vmb/src/mmixide/help/sync.html
@@ -1,8 +1,10 @@
 
 
-<h2>SYNC</h2>
+<h4>SYNC</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SYNC">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -18,6 +20,4 @@ Needed to synchronize processes.
 XYZ has a value from 0 to 7, where values greater 3 are reserved for the
 operating system.
 
-   </td></tr>
-</table>
 
