--- a/vmb/src/mmixide/help/syncid.html
+++ b/vmb/src/mmixide/help/syncid.html
@@ -1,8 +1,10 @@
 
 
-<h2>SYNCID</h2>
+<h4>SYNCID</h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="SYNCID">
+</OBJECT>
 
-<table width="100%" border=2 cellpadding=5><tr><td>
 
   <B>Name:</B>
 <p>
@@ -17,5 +19,3 @@ SYNCID: &upsilon;
 Synchronize instruction and data cache in the region
 $Y+$Z to X+$Y+$Z.
 
-   </td></tr>
-</table><p>
