--- a/vmb/src/mmixide/help/unsigned.html
+++ b/vmb/src/mmixide/help/unsigned.html
@@ -1,7 +1,7 @@
-<h4><a name="Unsigned_Arithmetic" id="Unsigned_Arithmetic"><Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+<h4><a name="Unsigned_Arithmetic" id="Unsigned_Arithmetic">Unsigned Arithmetic</a></h4>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Unsigned Arithmetic">
-</OBJECT>Unsigned Arithmetic</a></h4>
-
+</OBJECT>
 
 <B>Name:</B>
 <table cellspacing=5>
