--- a/vmb/src/mmixide/help/signed.html
+++ b/vmb/src/mmixide/help/signed.html
@@ -1,4 +1,6 @@
-<h4><a name="Signed_Arithmetic" id="Signed_Arithmetic">
+
+<Title>Signed Arithmetic</Title>
+<h4><a name="Signed_Arithmetic" id="Signed_Arithmetic">Signed Arithmetic</a></h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Signed Arithmetic">
 	<param name="Keyword" value="ADD">
@@ -6,7 +8,6 @@
 	<param name="Keyword" value="MUL">
 	<param name="Keyword" value="DIV">
 </OBJECT>
-
 
 
 <B>Name:</B>
