--- a/vmb/src/mmixide/help/bits.html
+++ b/vmb/src/mmixide/help/bits.html
@@ -1,11 +1,10 @@
 
 
-<h3>Bits and Bytes</a></h3>
+<h3>Bits and Bytes</h3>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Bit">
-	<param name="Keyword" value="Byte">
+	<param name="Keyword" value="Bits">
+	<param name="Keyword" value="Logic">
 </OBJECT>
-
 
 <ul>
 <li><a href="logic.html">Bitwise Logical Operators</a></li>
