--- a/vmb/src/mmixide/help/loadstore.html
+++ b/vmb/src/mmixide/help/loadstore.html
@@ -1,6 +1,6 @@
 
 
-<h3>Load and Store</a></h3>
+<h3>Load and Store</h3>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Load">
 		<param name="Keyword" value="Store">
