--- a/vmb/src/mmixide/help/mmixide.html
+++ b/vmb/src/mmixide/help/mmixide.html
@@ -1,11 +1,16 @@
+<head>
+<title>Help for MMIXIDE</title>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
+
 <h1>MMIX IDE</h1>
-<img src="..\Icons\mmixide.png">
+<img src="..\Icons\mmixide256.png">
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="MMIX">
 	<param name="Keyword" value="Content">
 </OBJECT>
-
-Content
+<p>
+Table of Content
 <ul>
 <li>MMIX
 	<ul>
