--- a/vmb/src/mmixide/help/shift.html
+++ b/vmb/src/mmixide/help/shift.html
@@ -1,5 +1,5 @@
 
-<h2>Shifting Bit Patterns<h2>
+<h4>Shifting Bit Patterns</h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Shifting">	
 	<param name="Keyword" value="SL">	
