--- a/vmb/src/mmixide/help/address.html
+++ b/vmb/src/mmixide/help/address.html
@@ -1,6 +1,6 @@
 
 
-<h3>Address Computations</a></h3>
+<h3>Address Computations</h3>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Address Computation">
 </OBJECT>
