--- a/vmb/src/mmixide/help/instructions.html
+++ b/vmb/src/mmixide/help/instructions.html
@@ -9,18 +9,18 @@
 
 <li><a href="farith.html">Floating Point Arithmetic</a></li>
 
-<li><a name="Bit_Operations" id="Bit_Operations">Bits and Bytes</a></li>
+<li><a  href="bits.html">Bits and Bytes</a></li>
 
-<li><a name="Address" id="Address">Address Computations</a></li>
+<li><a href="address.html">Address Computations</a></li>
 
-<li><a name="Load_Store" id="Load_Store">Load and Store</a></li>
+<li><a href="loadstore.html">Load and Store</a></li>
 
-<li><a name="Jumps" id="Jumps">Jumps and Branches</a></li>
+<li><a href="control.html">Jumps and Branches</a></li>
 
-<li><a name="Subroutines" id="Subroutines">Subroutines and Processes</a></li>
+<li><a href="subroutine.html">Subroutines and Processes</a></li>
 
-<li><a name="System" id="System">Special Registers and System Programming</a></li>
+<li><a href="special.html">Special Registers and System Programming</a></li>
 
-<li><a name="Assembler" id="Assembler">Assembler Instructions</a></li>
+<li><a href="assembler.html">Assembler Instructions</a></li>
 
 </ul>
