adding style sheet
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@446 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/orh.html
+++ b/vmb/src/mmixide/help/orh.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
 
 
 <h4><a name="16Bit_Immediate" id ="16Bit_Immediate">Bitwise Operations with 16-Bit Immediate values</a></h4>
