--- a/vmb/src/mmixide/help/instructions.html
+++ b/vmb/src/mmixide/help/instructions.html
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
+
 <h3>The MMIX Instruction Set</h3>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="MMIX">
