--- a/vmb/src/mmixide/help/integer.html
+++ b/vmb/src/mmixide/help/integer.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
 
 
 <h3><a name="Integer_Arithmetic" id="Integer_Arithmetic">Integer Arithmetic</a></h3>
