--- a/vmb/src/mmixide/help/pushj.html
+++ b/vmb/src/mmixide/help/pushj.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
 
 <h4>PUSHJ and PUSHGO</h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
