--- a/vmb/src/mmixide/help/signed.html
+++ b/vmb/src/mmixide/help/signed.html
@@ -1,5 +1,8 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
 
-<Title>Signed Arithmetic</Title>
+
 <h4><a name="Signed_Arithmetic" id="Signed_Arithmetic">Signed Arithmetic</a></h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Signed Arithmetic">
