--- a/vmb/src/mmixide/help/stb.html
+++ b/vmb/src/mmixide/help/stb.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
 
 <h4><a name="Signed_Store" id="Signed_Store">Storing Signed Integers</a></h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
