--- a/vmb/src/mmixide/help/stbu.html
+++ b/vmb/src/mmixide/help/stbu.html
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
+
 
 <h4><a name="Unsigned_Store" id="Unsigned_Store">Storing Unsigned Data</a></h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
