--- a/vmb/src/mmixide/help/assembler.html
+++ b/vmb/src/mmixide/help/assembler.html
@@ -1,4 +1,6 @@
-
+<head>
+<link rel="stylesheet" type="text/css" href="mmixide.css">
+</head>
 
 <h3>Assembler Instructions</h3>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
