--- a/vmb/src/mmixide/help/cset.html
+++ b/vmb/src/mmixide/help/cset.html
@@ -55,7 +55,7 @@
 <td><table>
      <td rowspan=2 valign="middle"> s($X) &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
     <td>  s($Z) if s($Y) satisfies condition xx,
 <tr><td>   0    otherwise
 </table>
