--- a/vmb/src/mmixide/help/fcmp.html
+++ b/vmb/src/mmixide/help/fcmp.html
@@ -31,7 +31,7 @@
 <table>
 <tr> <td rowspan=3 valign="middle"> s($X)  &larr; 
      <td rowspan=3 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
      <td> - 1 <td> if f($Y) &#x003C; f($Z)
 <tr><td>    0 <td> if f($Y) = f($Z)
 <tr><td>   +1 <td> if f($Y) &#x003E; f($Z)
@@ -40,7 +40,7 @@
 <table>
 <tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
      <td>  1  <td> if f ($Y) = f($Z)
 <tr><td>    0 <td> otherwise
 </table>
@@ -57,7 +57,7 @@ of the floating point representation of u. Then:
 <table>
 <tr> <td rowspan=3 valign="middle"> s($X)  &larr; 
      <td rowspan=3 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
      <td>  - 1 <td> if f($Y) &#x003C; N<sub>&#x03B5;</sub>(f($Z)) 
                     and N<sub>&#x03B5;</sub>(f($Y)) &#x003C; f($Z)
 <tr><td> 0     <td> if f($Y) &#x2208; N<sub>&#x03B5;</sub>(f($Z)) 
@@ -70,7 +70,7 @@ of the floating point representation of u. Then:
 <table>
 <tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
      <td> 1 <td> if f($Y) &#x2208; N<sub>&#x03B5;</sub>(f($Z)) 
                  and f($Z) &#x2208; N<sub>&#x03B5;</sub>(f ($Y))
 <tr><td>  0 <td> otherwise
@@ -84,7 +84,7 @@ The value of &#x03B5; is taken from the special register rE.
 <table>
 <tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
      <td>  1 <td> if either $Y or $Z is not a Number (NaN),
 <tr><td>  0  <td> otherwise
 </table>
@@ -93,7 +93,7 @@ The value of &#x03B5; is taken from the special register rE.
 <table>
 <tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
      <td>  1 <td> if either $Y, $Z or rE is not a Number (NaN),
 <tr><td>   0 <td> otherwise
 </table>
