--- a/vmb/src/mmixide/help/signed.html
+++ b/vmb/src/mmixide/help/signed.html
@@ -30,7 +30,7 @@
 <table>
 <tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
     <td> &lfloor;s($Y) / s($Z)&rfloor; <td> if  $Z &ne; 0 
 <tr><td> 0                             <td> if  $Z = 0 
 </table>
@@ -40,7 +40,7 @@
 <table>
 <tr><td rowspan=2 valign="middle"> s(rR)  &larr; 
     <td rowspan=2 valign="middle"> 
-      <img src="../image/brace.png" alt="{">
+      <img src="brace.png" alt="{">
     <td> s($Y) mod s($Z)  <td> if  $Z &ne; 0
 <tr><td> s($Y)            <td> if  $Z = 0  
 </table>
