--- a/vmb/src/mmixide/help/unsigned.html
+++ b/vmb/src/mmixide/help/unsigned.html
@@ -27,7 +27,7 @@
 <table>
 <tr> <td rowspan=2 valign="middle"> u($X)  &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
+       <img src="brace.png" alt="{">
     <td> &lfloor;u(rD $Y) / u($Z)&rfloor; <td> if   u($Z) &#x003E; u(rD) 
 <tr><td> u(rD)                            <td> otherwise
 </table>
@@ -35,7 +35,7 @@
 <table>
 <tr><td rowspan=2 valign="middle"> u(rR)  &larr; 
     <td rowspan=2 valign="middle"> 
-      <img src="../image/brace.png" alt="{">
+      <img src="brace.png" alt="{">
     <td> u(rD $Y) mod u($Z)  <td> if   u($Z) &#x003E; u(rD)
 <tr><td> u($Y)            <td> otherwise 
 </table>
