help system for instructions
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@449 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/mmixide.html
+++ b/vmb/src/mmixide/help/mmixide.html
@@ -3,14 +3,20 @@
 <link rel="stylesheet" type="text/css" href="mmixide.css">
 </head>
 
-<h1>MMIX IDE</h1>
+<center>
+
 <img src="..\Icons\mmixide256.png">
+<p>
+<h1>The MMIX Integrated Development Environment</h1>
+</center>
+
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="MMIX">
 	<param name="Keyword" value="Content">
 </OBJECT>
 <p>
-Table of Content
+
+<b>Table of Content</b>
 <ul>
 <li>MMIX
 	<ul>
